--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -7,5 +7,5 @@
     <title>{{titulo}}</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/estilos.css"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imgs/favicon.ico" type="image/x-icon">
   </head>
